# COMP5530M-Group-Project

./: .gitignore  CMakeLists.txt  CMakeLists.txt.orig  Source.cpp  test.lua
Launcher/: package-lock.json  package.json
Launcher/src/: App.css  App.jsx  styles.css
Launcher/src-tauri/: Cargo.toml  tauri.conf.json
Launcher/src-tauri/icons/: icon.icns
assets/: tree.mtl
assets/shaders/: animated.vert  collider.frag  colours.frag  colours.vert  core.frag  core.vert  cubemap.frag  cubemap.vert  empty.frag  empty.vert  grid.frag  grid.vert  icon.frag  icon.vert  tex.frag  tex.vert
build-util/: gen_component_storage.lua
docs/: adding_component_types.md  cpp_to_lua.md  example_script.lua  levels.md  projects.md
render-engine/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  LightSource.cpp  LightSource.h  RenderManager.cpp  RenderManager.h  RenderPipeline.cpp  RenderPipeline.h  ShaderProgram.cpp  ShaderProgram.h
src/: drawing.cpp  drawing.h  fdutil.cpp  fdutil.h  gui-typecases.generated  gui-typestrings.generated  gui.cpp  gui.h  levels.cpp  levels.h  logging.cpp  logging.h  main.cpp  metrics.cpp  metrics.h  scripting.cpp  scripting.h  util.h
src/ECS/: Engine.cpp  Engine.h
src/ECS/Component/: AudioSourceComponent.cpp  AudioSourceComponent.h  BaseComponent.cpp  BaseComponent.h  CameraComponent.cpp  CameraComponent.h  ControllerComponent.cpp  ControllerComponent.h  DirectionalLightComponent.cpp  DirectionalLightComponent.h  LightComponent.cpp  LightComponent.h  ModelComponent.cpp  ModelComponent.h  PlayerControllerComponent.cpp  PlayerControllerComponent.h  RigidBodyComponent.cpp  RigidBodyComponent.h  ScriptComponent.cpp  ScriptComponent.h  SkeletalModelComponent.cpp  SkeletalModelComponent.h  SkyBoxComponent.cpp  SkyBoxComponent.h  TransformComponent.cpp  TransformComponent.h  component_list.txt
src/ECS/ComponentLocation/: ComponentLocation.h
src/ECS/ComponentStorage/: ComponentStorage.cpp  ComponentStorage.h  codegen.cache
src/ECS/Entity/: BaseEntity.cpp  BaseEntity.h  CameraEntity.cpp  CameraEntity.h  ModelEntity.cpp  ModelEntity.h  SkeletalMeshEntity.cpp  SkeletalMeshEntity.h
src/ECS/EntityState/: EntityState.cpp  EntityState.h
src/ECS/Scene/: Scene.cpp  Scene.h
src/ECS/System/: BaseSystem.cpp  BaseSystem.h  InputSystem.cpp  InputSystem.h  InterfaceSystem.cpp  InterfaceSystem.h
src/ai/: ai.cpp  ai.h  aiHelper.cpp  aiHelper.h
src/asset_import/: animation.cpp  animation.h  audio.cpp  audio.h  folders.cpp  folders.h  images.cpp  images.h  materials.cpp  materials.h  model.cpp  model.h
src/model_import/: animation.cpp  animation.h  bone.cpp  bone.h  mesh.cpp  mesh.h  model.cpp  model.h
src/physics/: physicsCallbacks.cpp  physicsCallbacks.h  physicsObj.cpp  physicsObj.h
src/physics/headers/: physXCallbacks.h  physXobjects.cpp  physicsObj.h
src/physics/src/: physXCallbacks.cpp  physxCallback.cpp
src/physics_engine/: PhysicsEvents.cpp  physicsEngine.cpp  physicsEngine.h
src/skeletalmesh_import/: animation.cpp  animation.h  animator.cpp  animator.h  bone.cpp  bone.h  skeletalmesh.cpp  skeletalmesh.h  skeletalmodel.cpp  skeletalmodel.h
src/virtual_keys/: virtual_keys.cpp  virtual_keys.h
template/: CMakeLists.txt  project.json
template/assets/assets/: Avelino.glb  Drinking.fbx  Idle.fbx  Run Forward.fbx  T-Pose.fbx  diamante.mtl  sponza-pbr.mtl  test.lua  tree.mtl
template/assets/assets/Joao/animations/: Backflip.fbx  DrinkingJ.fbx  Idle.fbx  T-Pose.fbx  Walking.fbx
template/assets/assets/dancing-stormtrooper/source/: silly_dancing.fbx
template/assets/assets/pilot-avatar/source/: Pilot_LP_Animated.fbx
template/assets/assets/shaders/: animated.vert  colours.frag  colours.vert  core.frag  core.vert  empty.frag  empty.vert  entID.frag  entID.vert  frustum.vert  grid.frag  grid.vert  tex.frag  tex.vert
template/assets/shaders/: animated.vert  capsulewire.vert  colours.frag  colours.vert  cubewire.vert  entID.frag  entID.vert  frustum.vert  icon.frag  iconID.frag  iconID.vert  spherewire.vert  tex.frag  tex.vert
template/build-util/: gen_component_storage.lua
template/levels/: default.json
template/render-engine/: Buffer.cpp  Buffer.h  Camera.cpp  LightSource.cpp  LightSource.h  RenderManager.cpp  RenderManager.h  RenderPipeline.cpp  RenderPipeline.h
template/src/: drawing.cpp  fdutil.cpp  gui.cpp  hud.cpp  hud.h  levels.cpp  levels.h  main.cpp  metrics.h  scripting.cpp  scripting.h  util.h
template/src/ECS/: Engine.cpp  Engine.h
template/src/ECS/Component/: AudioSourceComponent.h  BaseComponent.cpp  BaseComponent.h  CameraComponent.cpp  CameraComponent.h  DirectionalLightComponent.cpp  DirectionalLightComponent.h  LightComponent.cpp  LightComponent.h  ModelComponent.cpp  ModelComponent.h  PlayerControllerComponent.cpp  PlayerControllerComponent.h  RigidBodyComponent.cpp  RigidBodyComponent.h  ScriptComponent.cpp  ScriptComponent.h  SkeletalModelComponent.cpp  SkeletalModelComponent.h  SkyBoxComponent.cpp  SkyBoxComponent.h  TransformComponent.cpp  TransformComponent.h  component_list.txt
template/src/ECS/ComponentLocation/: ComponentLocation.h
template/src/ECS/ComponentStorage/: ComponentStorage.cpp  ComponentStorage.h  codegen.cache
template/src/ECS/Entity/: BaseEntity.cpp  BaseEntity.h  CameraEntity.cpp  CameraEntity.h  ModelEntity.cpp  SkeletalMeshEntity.cpp  SkeletalMeshEntity.h
template/src/ECS/EntityState/: EntityState.cpp  EntityState.h
template/src/ECS/Scene/: Scene.cpp  Scene.h
template/src/ECS/System/: InputSystem.cpp  InputSystem.h  InterfaceSystem.cpp
template/src/asset_import/: animation.cpp  animation.h  audio.h  folders.cpp  folders.h  images.cpp  images.h  materials.cpp  model.cpp  model.h
template/src/model_import/: animation.cpp  bone.cpp  mesh.cpp  mesh.h  model.cpp  model.h
template/src/physics_engine/: PhysicsEvents.cpp  PhysicsEvents.h  physicsEngine.cpp
user-manual/: logo.psd  ~$erManual.docx
user-manual/images/: create-project.psd
